// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterMenu rendering renders expected elements 1`] = `
<React.Fragment>
  <IconMenu
    aria-label="Add filter"
    className="FilterMenu"
    disabled={false}
    icon={
      Object {
        "icon": Array [],
        "iconName": "filter",
        "prefix": "fas",
      }
    }
    id="filterButton"
    tooltipPlacement="top"
    tooltipText="Add filter"
  >
    <IconMenuItem
      data-key="a"
      onClick={[Function]}
    />
    <IconMenuItem
      data-key="b"
      onClick={[Function]}
    />
  </IconMenu>
</React.Fragment>
`;

exports[`FilterMenu rendering renders expected elements when filter is set 1`] = `
<React.Fragment>
  <IconMenu
    aria-label="Add filter"
    className="FilterMenu FilterMenu--active"
    disabled={false}
    icon={
      Object {
        "icon": Array [],
        "iconName": "filter",
        "prefix": "fas",
      }
    }
    id="filterButton"
    tooltipPlacement="top"
    tooltipText="Add filter"
  >
    <IconMenuItem
      data-key="a"
      onClick={[Function]}
    />
    <IconMenuItem
      data-key="b"
      onClick={[Function]}
    />
  </IconMenu>
  <React.Portal>
    <FilterEditor
      buttonId="filterButton"
      getEditor={[MockFunction]}
      getLabel={
        [MockFunction] {
          "calls": Array [
            Array [
              "a",
            ],
            Array [
              "b",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      name="value"
      onClose={[Function]}
      onSave={[Function]}
    />
  </React.Portal>
</React.Fragment>
`;

exports[`FilterMenu rendering renders expected elements when filters is set 1`] = `
<React.Fragment>
  <IconMenu
    aria-label="Add filter"
    className="FilterMenu"
    disabled={false}
    icon={
      Object {
        "icon": Array [],
        "iconName": "filter",
        "prefix": "fas",
      }
    }
    id="filterButton"
    tooltipPlacement="top"
    tooltipText="Add filter"
  >
    <IconMenuItem
      data-key="a"
      onClick={[Function]}
    />
    <IconMenuItem
      data-key="b"
      onClick={[Function]}
    />
  </IconMenu>
</React.Fragment>
`;
